# TinyTerm

./: .gitignore  CMakeLists.txt  clean-up.sh
src/: config.h.in  tinyterm.c
